RESOLVED FIXED232986
[RemoteInspector][Socket] Can't find the target since r277787
https://bugs.webkit.org/show_bug.cgi?id=232986
Summary [RemoteInspector][Socket] Can't find the target since r277787
Tomoki Imai
Reported 2021-11-11 00:21:51 PST
How to reproduce: - Launch MiniBrowser on the target - Launch MiniBrowser on the host (WinCairo) - Try to connect to the target by inspector://. Expected result: - The target should be listed. Actual result: - "No targets found" message is shown. This issue is same as bug 226908. r277787 changed WebURLSchemeTask::request()'s return type and caused the issue.
Attachments
patch (1.59 KB, patch)
2021-11-11 00:28 PST, Tomoki Imai
no flags
Tomoki Imai
Comment 1 2021-11-11 00:28:09 PST
Created attachment 443918 [details] patch Patch to fix the issue in the same way as r278748.
EWS
Comment 2 2021-11-11 11:06:05 PST
Committed r285641 (244142@main): <https://commits.webkit.org/244142@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443918 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-11 11:07:49 PST
Alexey Proskuryakov
Comment 4 2021-11-11 11:53:03 PST
Comment on attachment 443918 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=443918&action=review > Source/WebKit/ChangeLog:9 > + Remote Inspector has the same issue as bug 226908. > + RemoteInspectorProtocolHandler needs the same fix as r278748. I haven't seen that patch at the time, but I don't see how either of the fixes is correct. Could you please clarify?
Tomoki Imai
Comment 5 2021-11-11 18:28:55 PST
(In reply to Alexey Proskuryakov from comment #4) > Comment on attachment 443918 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=443918&action=review > > > Source/WebKit/ChangeLog:9 > > + Remote Inspector has the same issue as bug 226908. > > + RemoteInspectorProtocolHandler needs the same fix as r278748. > > I haven't seen that patch at the time, but I don't see how either of the > fixes is correct. Could you please clarify? Sure, sorry for not explaining in this bugzilla. (quoted from bug 226908 comment 1) > r277787 (Bug 226001) changed the return type of > WebURLSchemeTask::request() > from const WebCore::ResourceRequest& to WebCore::ResourceRequest. > InspectorResourceURLSchemeHandler::platformStartTask shouldn't > hold the reference of temporary object. Currently, task.request() creates a temporal ResourceRequest, which is destructed immediately after "auto& requestURL = task.request().url();". ResourceRequest.url() returns the reference of ResourceRequest.m_url, so it's also destructed immediately too. Therefore requestURL becomes a invalid reference to destructed object, which should not be happened. (In this case, it's recognized as null URL.) So we changed "auto&" to "auto" to copy the temporal URL.
Note You need to log in before you can comment on or make changes to this bug.