[RemoteInspector][Socket] Can't find the target since r277787 https://bugs.webkit.org/show_bug.cgi?id=232986

Reviewed by Don Olmstead.

Remote Inspector has the same issue as bug 226908.
RemoteInspectorProtocolHandler needs the same fix as r278748.

* UIProcess/Inspector/socket/RemoteInspectorProtocolHandler.cpp: Copy WebURLSchemeTask.request().url() to avoid obtaining the temporary object.



Canonical link: https://commits.webkit.org/244142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285641 268f45cc-cd09-0410-ab3c-d52691b4dbfc